fix letter spacing splash page

--- a/src/blocks/splash/Splash.module.scss
+++ b/src/blocks/splash/Splash.module.scss
@@ -20,15 +20,15 @@
     text-align: center;
     width: 65%;
     font-size: 16px;
-    font-weight: 600;
+    font-weight: 500;
     color: white;
     line-height: normal;
-    letter-spacing: 2.5px;
+    letter-spacing: 1.2px;
     padding-bottom: 32px;
     border-bottom: 2px solid white;
     @include media($ipad-land) {
       width: 30%;
-      font-size: 12px;
+      font-size: 16px;
       border-bottom: 2px solid white;
     }
   }
